--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ minecraft {
 }
 
 repositories {
-	maven{
-		url "https://maven.terraformersmc.com/releases"
-	}
+	//maven{
+		//url "https://maven.terraformersmc.com/releases"
+	//}
 }
 
 dependencies {
@@ -28,7 +28,7 @@ dependencies {
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 
-	modRuntime "com.terraformersmc:modmenu:2.0.0-beta.7"
+	//modRuntime "com.terraformersmc:modmenu:2.0.0-beta.7"
 }
 
 processResources {
