--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,11 @@ minecraft {
 }
 
 repositories {
-	//maven{
-		//url "https://maven.terraformersmc.com/releases"
-	//}
+	maven {
+		url = uri("https://storage.googleapis.com/devan-maven/")
+		// for 0.4.2 and older
+		// url uri("https://raw.githubusercontent.com/Devan-Kerman/Devan-Repo/master/")
+	}
 }
 
 dependencies {
@@ -28,6 +30,7 @@ dependencies {
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 
+	include(modImplementation("net.devtech:arrp:0.4.4"))
 	//modRuntime "com.terraformersmc:modmenu:2.0.0-beta.7"
 }
 
